# greenlight_sign_verify

./: .gitignore  Cargo.toml  README.md  makefile
src/: greenlight_init.rs  main.rs
